manifests/dockerreg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerreg
  labels:
    app: dockerreg
spec:
  selector:
    matchLabels:
      app: dockerreg
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dockerreg
    spec:
      securityContext:
        runAsUser: 1000
      terminationGracePeriodSeconds: 10
      containers:
        - name: dockerreg
          image: registry:2.7
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 0.10
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - name: dockerreg
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          readinessProbe:
            httpGet:
              port: dockerreg
              path: /
            initialDelaySeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              port: dockerreg
              path: /
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: empty
              mountPath: /empty
              readOnly: false
      volumes:
        - name: config
          configMap:
            name: dockerreg
        - name: empty
          emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: dockerreg
  labels:
    app: dockerreg
spec:
  clusterIP: 10.43.14.192
  ports:
    - port: 80
      name: dockerreg
      targetPort: dockerreg
    - port: 9090
      name: metrics
      targetPort: metrics
  selector:
    app: dockerreg
