manifests/argo-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: argo
  name: argo-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/ingress-ca-cert"
spec:
  rules:
    - host: argo.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: argo-server
              servicePort: 2746
  tls:
    - hosts:
        - argo.k3s.hughobrien.ie
      secretName: argo-cert
