manifests/argocd.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/mtls-cert"
spec:
  rules:
    - host: deploys.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: https
  tls:
    - hosts:
        - deploys.k3s.hughobrien.ie
      secretName: argocd-cert
