manifests/docker-registry.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: docker-registry
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/ingress-ca-cert"
spec:
  rules:
    - host: registry.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: http
  tls:
    - hosts:
        - registry.k3s.hughobrien.ie
      secretName: registry-cert

---
kind: Service
apiVersion: v1
metadata:
  namespace: docker-registry
  name: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - name: http
      port: 5000
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.7.1
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: image-store
              mountPath: "/data"
            - name: ssl
              mountPath: "/ssl"
            - name: htpasswd
              mountPath: "/auth"
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: docker-registry
        - name: ssl
          secret:
            secretName: registry-cert
        - name: htpasswd
          secret:
            secretName: htpasswd
