manifests/longhorn-ingress-storageclass.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: longhorn-system
  name: longhorn-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/ingress-ca-cert"
spec:
  rules:
    - host: longhorn.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: longhorn-frontend
              servicePort: 80
  tls:
    - hosts:
        - longhorn.k3s.hughobrien.ie
      secretName: longhorn-cert
