manifests/longhorn-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: longhorn-system
  name: longhorn-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: longhorn.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: longhorn-frontend
              servicePort: 80
