manifests/prometheus.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: prometheus
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/ingress-cert"
spec:
  rules:
    - host: prometheus.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: http
  tls:
    - hosts:
        - prometheus.k3s.hughobrien.ie
      secretName: prometheus-cert
---
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus
  name: prometheus
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: prometheus
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: prometheus
          image: prom/prometheus:v2.17.2
          resources:
            requests:
              memory: 256Mi
              cpu: 0.1
          command:
            - /config/entrypoint.sh
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
              readOnly: true
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prometheus
        - name: tmp
          emptyDir:
        - name: config
          configMap:
            name: prometheus
            defaultMode: 0500
