manifests/traefik-admin.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: traefik-api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.k3s.hughobrien.ie
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-api
              servicePort: dash
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: traefik-api
  labels:
    app: traefik-api
spec:
  selector:
    app: traefik
  type: ClusterIP
  ports:
    - port: 80
      name: dash
      targetPort: dash
